--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,9 @@ readme = "README.md"
 cryptoshot = "cryptoshot.__main__:main"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 requests = "^2.31.0"
-pytz = "^2024.1"
+rich = "^13.7.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
