--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,14 @@ dependencies = ["requests (>=2.32.3,<3.0.0)", "rich (>=14.0.0,<15.0.0)"]
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
 ruff = "^0.11.6"
+pre-commit = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
-line-length = 99
+line-length = 100
 
 [tool.isort]
-line_length = 99
+line_length = 100
