ci: lint with pre-commit + ruff (#26)
* ci: lint with pre-commit + ruff

* ruff format

* status badge

--- a/config.example.json
+++ b/config.example.json
@@ -1,21 +1,8 @@
 {
     "services": [
-        {
-            "name": "kraken1",
-            "type": "kraken",
-            "api_token": "apitoken",
-            "private_key": "privatekey"
-        },
-        {
-            "name": "coinapi1",
-            "type": "coinapi",
-            "api_token": "apitokenn"
-        },
-        {
-            "name": "coingecko1",
-            "type": "coingecko",
-            "api_token": "apitoken"
-        }
+        {"name": "kraken1", "type": "kraken", "api_token": "apitoken", "private_key": "privatekey"},
+        {"name": "coinapi1", "type": "coinapi", "api_token": "apitokenn"},
+        {"name": "coingecko1", "type": "coingecko", "api_token": "apitoken"}
     ],
     "accounts": [
         {
@@ -25,30 +12,10 @@
         }
     ],
     "assets": {
-        "include": [
-            "BTC",
-            "BCH",
-            "ETH",
-            "DOT",
-            "KSM",
-            "USDT"
-        ],
+        "include": ["BTC", "BCH", "ETH", "DOT", "KSM", "USDT"],
         "exclude": [],
-        "group": {
-            "BTC": [
-                "XBT"
-            ]
-        }
+        "group": {"BTC": ["XBT"]}
     },
-    "price_oracle": {
-        "quote_asset": "EUR",
-        "priority": [
-            "kraken1",
-            "coinapi1",
-            "coingecko1"
-        ]
-    },
-    "formatting": {
-        "timestamp": "%d-%m-%YT%H:%M:%S"
-    }
+    "price_oracle": {"quote_asset": "EUR", "priority": ["kraken1", "coinapi1", "coingecko1"]},
+    "formatting": {"timestamp": "%d-%m-%YT%H:%M:%S"}
 }
