--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = ["requests (>=2.32.3,<3.0.0)", "rich (>=14.0.0,<15.0.0)"]
 
 [tool.poetry]
 
+[tool.poetry.scripts]
+cryptoshot = "cryptoshot.__main__:main"
+
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
