chore: switch to uv

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,15 +4,19 @@ on:
     branches:
       - main
   pull_request:
+
 jobs:
   lint:
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - name: Install Python 3
-        uses: actions/setup-python@v6
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v4
         with:
           python-version: "3.13"
-      - uses: pre-commit/action@v3.0.1
+      - name: Sync dependencies (all groups)
+        run: uv sync --all-groups
+      - name: Run pre-commit
+        uses: pre-commit/action@v3.0.1
         env:
           RUFF_OUTPUT_FORMAT: github
