--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,22 +6,26 @@ authors = [{ name = "Ross", email = "git@ross.ch" }]
 license = { text = "GPLv3" }
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = ["requests (>=2.32.3,<3.0.0)", "rich (>=14.0.0,<15.0.0)"]
+dependencies = [
+  "requests>=2.32.3",
+  "rich>=14.0.0",
+]
 
-[tool.poetry]
-
-[tool.poetry.scripts]
+[project.scripts]
 cryptoshot = "cryptoshot.__main__:main"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^9.0.2"
-pytest-cov = "^7.0.0"
-ruff = "^0.14.10"
-pre-commit = "^4.5.1"
+[dependency-groups]
+# Development-only dependencies
+dev = [
+  "pytest>=9.0.2",
+  "pytest-cov>=7.0.0",
+  "ruff>=0.14.10",
+  "pre-commit>=4.5.1",
+]
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling>=1.24.0"]
+build-backend = "hatchling.build"
 
 [tool.ruff]
 line-length = 100
