--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,16 +9,38 @@ on:
 
 jobs:
   lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
       - name: Set up uv
         uses: astral-sh/setup-uv@v7
         with:
-          python-version: "3.13"
+          python-version: "3.14"
       - name: Sync dependencies (all groups)
         run: uv sync --all-groups
-      - name: Run pre-commit
-        uses: pre-commit/action@v3.0.1
-        env:
-          RUFF_OUTPUT_FORMAT: github
+      - name: Pre-Commit
+        uses: j178/prek-action@v1
+        with:
+          extra-args: "--all-files"
+
+  test:
+    name: Tests
+    needs: lint
+    strategy:
+      fail-fast: true
+      matrix:
+        python-version: ["3.14"]
+    runs-on: "ubuntu-latest"
+    steps:
+      - uses: actions/checkout@v6
+      - uses: astral-sh/setup-uv@v7
+        with:
+          python-version: ${{ matrix.python-version }}
+          activate-environment: true
+      - name: Run Pytest
+        run: uv run pytest -vv --cov=cryptoshot --cov-report=xml tests/
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
